--- a/chrome/locale/en-US/overlay.dtd
+++ b/chrome/locale/en-US/overlay.dtd
@@ -1,9 +1,9 @@
-<!ENTITY zotero.zoterocitationcounts.crossref.label "Get Crossref citation count">
-<!ENTITY zotero.zoterocitationcounts.inspire.label "Get Inspire HEP citation count">
-<!ENTITY zotero.zoterocitationcounts.ads.label "Get NASA/ADS citation count">
-<!ENTITY zotero.zoterocitationcounts.semanticscholar.label "Get Semantic Scholar citation count">
-<!ENTITY zotero.zoterocitationcounts.menu.label "Manage Citation Counts">
-<!ENTITY zotero.zoterocitationcounts.toolsmenu.label "Get citation counts for new items">
+<!ENTITY zotero.zotitle.crossref.label "Get Crossref citation count">
+<!ENTITY zotero.zotitle.inspire.label "Get Inspire HEP citation count">
+<!ENTITY zotero.zotitle.ads.label "Get NASA/ADS citation count">
+<!ENTITY zotero.zotitle.semanticscholar.label "Get Semantic Scholar citation count">
+<!ENTITY zotero.zotitle.menu.label "Manage Citation Counts">
+<!ENTITY zotero.zotitle.toolsmenu.label "Get citation counts for new items">
 
 <!ENTITY citationcounts-preferences-label "Citation Counts Manager Preferences…">
 <!ENTITY citationcounts-autoretrieve-label "Get citation counts for new items">
