--- a/chrome/locale/en-US/overlay.dtd
+++ b/chrome/locale/en-US/overlay.dtd
@@ -1,20 +1,20 @@
 <!ENTITY zotitle.toolsmenu.label "Change title case for selected items">
 <!ENTITY zotitle.upper.label "UPPERCASE">
-<!ENTITY zotitle.inspire.label "lowercase">
-<!ENTITY zotitle.ads.label "Sentence case">
-<!ENTITY zotitle.semanticscholar.label "Camel Case">
+<!ENTITY zotitle.lower.label "lowercase">
+<!ENTITY zotitle.title.label "Title Case">
+<!ENTITY zotitle.sentence.label "Sentence case">
 <!ENTITY zotitle.menu.label "Item Title Manager">
 
 <!ENTITY zotitle-preferences-label "Item Title Modifier Preferences…">
 <!ENTITY zotitle-autoretrieve-label "Change title case for selected items">
 <!ENTITY zotitle-autoretrieve-upper-label "changeToUpper">
-<!ENTITY zotitle-autoretrieve-inspire-label "Inspire HEP">
-<!ENTITY zotitle-autoretrieve-ads-label "NASA/ADS">
-<!ENTITY zotitle-autoretrieve-semanticscholar-label "Camel Case">
+<!ENTITY zotitle-autoretrieve-lower-label "changeToLower">
+<!ENTITY zotitle-autoretrieve-title-label "changeToTitle">
+<!ENTITY zotitle-autoretrieve-sentence-label "changeToSentence">
 <!ENTITY zotitle-autoretrieve-no-label "No">
 
 <!ENTITY zotitle-menu-label "Item Title Manager">
 <!ENTITY zotitle-menu-upper-label "UPPERCASE">
-<!ENTITY zotitle-menu-inspire-label "lowercase">
-<!ENTITY zotitle-menu-ads-label "Sentence case">
-<!ENTITY zotitle-menu-semanticscholar-label "Camel Case">
+<!ENTITY zotitle-menu-lower-label "lowercase">
+<!ENTITY zotitle-menu-title-label "Title Case">
+<!ENTITY zotitle-menu-sentence-label "Sentence case">
