--- a/chrome/locale/en-US/zotitle.properties
+++ b/chrome/locale/en-US/zotitle.properties
@@ -1,2 +1,2 @@
-invalidChangeTitleCaseString=Invalid citation counts
-invalidChangeTitleCaseTagString=Invalid citation counts were found. These have been tagged with _Invalid citation counts.
+invalidChangeTitleCaseString=Invalid title change
+invalidChangeTitleCaseTagString=Invalid titles were found. These have been tagged with _Invalid title.
